# readability-rs

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  DEVIATIONS.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
benches/: compare.sh  extraction.rs
benches/go/: bench_test.go  go.mod  go.sum
src/: article.rs  error.rs  inspect.rs  lib.rs  parser.rs  traverse.rs  utils.rs
src/dom/: mod.rs
src/parser/: clean.rs  helpers.rs  metadata.rs  mod.rs  parse.rs  prep.rs  scoring.rs
src/regexp/: mod.rs
src/render/: mod.rs
test-pages/001/: expected-metadata.json
test-pages/ars-1/: expected-metadata.json
test-pages/article-author-tag/: expected-metadata.json
test-pages/bbc-1/: expected-metadata.json  expected.html
test-pages/breitbart/: expected-metadata.json
test-pages/bug-1255978/: expected-metadata.json  expected.html
test-pages/buzzfeed-1/: expected-metadata.json
test-pages/citylab-1/: expected-metadata.json  expected.html
test-pages/ehow-1/: expected-metadata.json  expected.html
test-pages/ehow-2/: expected-metadata.json  expected.html
test-pages/engadget/: expected-metadata.json
test-pages/firefox-nightly-blog/: expected-metadata.json
test-pages/gitlab-blog/: expected-metadata.json  expected.html  source.html
test-pages/google-sre-book-1/: expected-metadata.json
test-pages/herald-sun-1/: expected-metadata.json
test-pages/ietf-1/: expected-metadata.json
test-pages/mathjax/: expected-metadata.json
test-pages/medium-3/: expected-metadata.json
test-pages/mozilla-1/: expected-metadata.json
test-pages/msn/: expected-metadata.json
test-pages/noscript-img-1/: expected-metadata.json  expected.html  source.html
test-pages/noscript-img-2/: expected-metadata.json  expected.html  source.html
test-pages/nytimes-1/: expected.html
test-pages/nytimes-2/: expected.html
test-pages/nytimes-3/: expected-metadata.json
test-pages/nytimes-4/: expected-metadata.json
test-pages/parsely-metadata/: expected-metadata.json
test-pages/qq/: expected.html
test-pages/replace-brs/: expected-metadata.json  expected.html  source.html
test-pages/royal-road/: expected-metadata.json
test-pages/schema-org-context-object/: expected-metadata.json  expected.html
test-pages/simplyfound-1/: expected.html
test-pages/spiceworks/: expected-metadata.json
test-pages/substack/: expected-metadata.json  expected.html  source.html
test-pages/telegraph/: expected-metadata.json
test-pages/toc-missing/: expected-metadata.json
test-pages/v8-blog/: expected.html
test-pages/wikipedia/: expected-metadata.json
test-pages/wikipedia-4/: expected-metadata.json  expected.html
test-pages/wordpress/: expected-metadata.json  expected.html
test-pages/yahoo-2/: expected-metadata.json
test-pages/yahoo-3/: expected.html
tests/: fixtures.rs
tests/bindings/kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
tests/bindings/python/: test_article.py  test_config.py  test_extract.py
uniffi/: Cargo.toml  uniffi.toml
uniffi/src/: lib.rs
(+5 files in other folders)
